--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your code here! -->
+<h1></h1>
+<p>
+     <strong>
+        <em></em>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"></a>
+
+     </strong>
+     
+
+    </p>
+    <table></table>
